; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/unix/extr_unix_shared.c_Sys_XTimeToSysTime.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/unix/extr_unix_shared.c_Sys_XTimeToSysTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@in_subframe = common dso_local global %struct.TYPE_2__* null, align 8
@sys_timeBase = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Sys_XTimeToSysTime(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @in_subframe, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %13, label %11

11:                                               ; preds = %1
  %12 = call i32 (...) @Sys_Milliseconds()
  store i32 %12, i32* %2, align 4
  br label %33

13:                                               ; preds = %1
  %14 = load i64, i64* %3, align 8
  %15 = load i32, i32* @sys_timeBase, align 4
  %16 = mul nsw i32 %15, 1000
  %17 = sext i32 %16 to i64
  %18 = sub i64 %14, %17
  %19 = trunc i64 %18 to i32
  store i32 %19, i32* %4, align 4
  %20 = call i32 (...) @Sys_Milliseconds()
  store i32 %20, i32* %5, align 4
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* %4, align 4
  %23 = sub nsw i32 %21, %22
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* %6, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %29, label %26

26:                                               ; preds = %13
  %27 = load i32, i32* %6, align 4
  %28 = icmp sgt i32 %27, 30
  br i1 %28, label %29, label %31

29:                                               ; preds = %26, %13
  %30 = load i32, i32* %5, align 4
  store i32 %30, i32* %2, align 4
  br label %33

31:                                               ; preds = %26
  %32 = load i32, i32* %4, align 4
  store i32 %32, i32* %2, align 4
  br label %33

33:                                               ; preds = %31, %29, %11
  %34 = load i32, i32* %2, align 4
  ret i32 %34
}

declare dso_local i32 @Sys_Milliseconds(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
